# manim-narration

./: .gitignore  README.md  justfile  pyproject.toml
benchmarks/: alignment_services.py  speech_services.py  speechservices.py
examples/: getting_started.py
src/manim_narration/: __init__.py  audio_utils.py  config_.py  manim_narration.cfg  narration_scene.py  tags.py  tracker.py  typing.py  utils.py
src/manim_narration/_config/: config.py  config_base.py
src/manim_narration/alignment/: __init__.py  aligner_base.py  ctc.py  interpolator.py  manual.py
src/manim_narration/config/: base.py  config.py
src/manim_narration/speech/: __init__.py  base.py  chatterbox.py  coqui.py  gtts.py  kokoro.py  speech_base.py
tests/: audio_utils_test.py  config_test.py  conftest.py  init_test.py  narration_scene_test.py  tags_test.py  tracker_test.py  utils_test.py
tests/_config/: base_test.py  config_base_test.py
tests/alignment/: aligner_base_test.py  interpolator_test.py  manual_test.py
tests/config/: base_test.py
tests/control_data/: cache.json
