[project]
name = "manim-narration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "python-slugify[unidecode]>=8.0.4",
    "sox>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
]
gtts = [
    "gtts>=2.5.4",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    # "tests/",
    # "examples/",
    "uv.lock",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "D", # pydocstyle
    "E", # pycodestyle error
    "W",  # pycodestyle warning
]
ignore = [
    "D100", # public module docstring
    "D102", # public method docstring
    "D104", # package docstring
    "D105", # magic method docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
# "examples/*" = ["D"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
files = ["src"]
show_error_codes = true
pretty = true
strict = true
exclude_gitignore = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The '__version__' attribute is deprecated:DeprecationWarning",
    "ignore:'audioop' is deprecated and slated for removal:DeprecationWarning"
]
