[project]
name = "manim-narration"
version = "0.1.0"
description = "Add narrations to your manim scenes!"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "manim>=0.19.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "manim-narration[full]",
    "coverage>=7.10.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[project.optional-dependencies]
full = ["manim-narration[ctc]", "manim-narration[coqui]", "manim-narration[gtts]", "manim-narration[kokoro]"]
coqui = [
    "coqui-tts>=0.27.2",
]
gtts = [
    "gtts>=2.5.4",
]
kokoro = [
    "kokoro>=0.9.4",
    "pip>=25.2",
    "soundfile>=0.13.1",
]
ctc = [
    "ctc-forced-aligner",
]

[project.entry-points."manim.plugins"]
manim_narration = "manim_narration.main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "benchmarks",
    # "docs/",
    # "examples/",
    "tests/",
    # "CHANGES.rst",
    "uv.lock"
]
source-exclude = [
    # "docs/_build/",
]

[tool.uv.sources]
ctc-forced-aligner = { git = "https://github.com/MahmoudAshraf97/ctc-forced-aligner.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "failing_assertions: one or more assertion fail for no obvious reason",
]
filterwarnings = [
    "error",
    # "ignore:The '__version__' attribute is deprecated and will be removed in Click 9.1:DeprecationWarning",# cloup
    "ignore:invalid escape sequence:SyntaxWarning", # pydub
    "ignore:invalid escape sequence:DeprecationWarning", # pydub (<3.12)
    "ignore:'audioop' is deprecated and slated for removal:DeprecationWarning", # audioop
    'ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning',
]

[tool.coverage.run]
branch = true
source = ["src/manim_narration", "tests", "benchmarks"]

[tool.mypy]
files = ["src", "benchmarks"]
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = [
    "ctc_forced_aligner.*",
    "manim.*",
    "manim_narration.*",
    "gtts.*",
    "TTS.*",
    "kokoro.*",
    "soundfile.*",
]

ignore_missing_imports = true

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle error
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]

ignore = [
    "D1",   # undocumented public ...
    "D203", # incorrect-blank-line-before-class (incompatible with D211)
    "D213", # multi-line-summary-second-line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",    # missing docstring
    "F841", # unused-variable
]
